--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,23 @@
   background: #f8fafc;
 }
 
+.main-page{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-logo {
+  height: 15%;
+  width: 15%;
+}
+
+.main-logo-font{
+  margin-top: 5%;
+  color: #13562C;
+  font-size: 64px;
+  font-weight: 800;
+}
+
 #side-bar {
   @media (min-width: 600px) {
     width: 300px;
