--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,21 @@ button:hover {
   color: #1bc75a;
 }
 
+button2 {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  color: #ffffff;
+  background-color: #54966D;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  height: 25px;
+  width: 250px;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
