--- a/src/style.css
+++ b/src/style.css
@@ -108,6 +108,44 @@
   background: #3b82f6;
 }
 
+.login-container{
+  flex: 1;
+  padding: 24px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+}
+
+.login-card {
+  width: 400px !important;
+  max-width: 100%;
+  height: 500px;
+  max-height: 100%;
+  box-sizing: border-box;
+  border: 1px solid #e2e8f0;
+  border-radius: 5px;
+  padding: 64px;
+  padding-bottom: 100px;
+  margin: 0 !important;
+  margin-top: 20%;
+  background: #ffffff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-title{
+  font-size: 20px;
+  font-weight: 700;
+  color: #0f172a;
+  margin: 0 0 24px 0;
+  padding: 0 12px;
+}
+
 #main {
   display: flex;
   min-height: 100vh;
