--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,8 @@
   justify-content: space-between;
   align-items: right;
   padding: 0 24px;
+  width: 102%;
+  margin: -5% 0% 0% -2%;
 }
 
 .topnav a {
@@ -57,13 +59,13 @@
   text-align: center;
   padding: 20px 24px;
   text-decoration: none;
-  font-size: 28px;
+  font-size: 21px;
   font-weight: 800;
   transition: all 0.3s ease;
   position: relative;
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 12px;
 }
 
 .topnav a.logo-link {
@@ -140,10 +142,43 @@
 
 .login-title{
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 650;
   color: #0f172a;
   margin: 0 0 24px 0;
   padding: 0 12px;
+}
+
+.login-option{
+  font-size: 20px;
+  font-weight: 650;
+  color: #BECBC3;
+  margin: 0 0 24px 0;
+  padding: 0 50px;
+  border-bottom: 2px solid;
+  cursor: pointer;
+
+}
+
+.login-option.active{
+  color: #13562C;
+  border-bottom: 4px solid #13562C;
+}
+
+.input-row{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+  color: #1e293b;
+  margin-bottom: 8px;
+  width: 300px;
+}
+
+.terms{
+  color: #8e8e8f;
+  font-size:12px;
+  margin-top: 10%;
 }
 
 #main {
@@ -268,5 +303,5 @@ html {
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-  background: #f8fafc;
+  background: #F8FEF9;
 }
