--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: black;
 }
 
 .motion-card:hover {
@@ -226,7 +227,7 @@
 }
 
 .motions-section {
-  width: 100%;
+  width: 50%;
 }
 
 .section-title {
