--- a/src/style.css
+++ b/src/style.css
@@ -199,6 +199,11 @@
   width: 15%;
 }
 
+.custom-logo {
+  height: auto;
+  width: auto;
+}
+
 .main-logo-font{
   margin-top: 5%;
   color: #13562C;
@@ -216,6 +221,7 @@
     position: sticky;
     top: 0;
     /* Edit below, do not touch above */
+    
   }
 }
 
