fix App.jsx to use the new login page

--- a/src/style.css
+++ b/src/style.css
@@ -716,6 +716,8 @@ body {
 
   .vote-buttons {
     flex-direction: column;
+  }
+}
 /* Site name font - Lalezar */
 .site-name {
   font-family: Lalezar, cursive;
