--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   justify-content: space-between;
   color: black;
+  cursor: pointer;
 }
 
 .motion-card:hover {
@@ -277,6 +278,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 /* Motion details stuff */
