--- a/src/style.css
+++ b/src/style.css
@@ -471,14 +471,21 @@ body {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
+  /* backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px); */ 
+  /* THE ABOVE IS sooo laggy but below is also kinda laggy*/
+  /* background-color: rgba(0, 0, 0, 0.5);
+  animation: fadeIn 0.2s ease; */
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 9999;
   padding: 20px;
 }
+/* @keyframes fadeIn {
+  from { opacity: 0 }
+  to { opacity: 1 }
+} */
 
 .modal-content {
   background: #ffffff;
