--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,27 @@
   --color-superlight-green: #F8FEF9;
 }
 
+@variant dark (&:is(.dark *));
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color-scheme: light;
+  color: #213547;
   background-color: #F8FEF9;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html.dark {
+  color-scheme: dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #111827;
 }
 
 a {
@@ -79,15 +87,3 @@ button2:hover {
   background-color: #5ca377;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #000000;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
